--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "",
   "scripts": {
     "server": "node server.js",
-    "start": "webpack --display-error-details --progress --colors --watch",
+    "start": "webpack --display-error-details --progress --colors --watch  --hot --inline",
     "build": "webpack --progress --profile --colors --config webpack.production.config.js"
   },
   "repository": "",
@@ -39,11 +39,13 @@
     "react": "^15.4.2",
     "react-datetime": "^2.8.3",
     "react-dom": "^15.4.2",
+    "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
     "react-router-redux": "^4.0.7",
     "recharts": "^0.20.2",
     "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
     "reqwest": "^2.0.5",
     "sass-loader": "^4.1.1",
